force-app/main/default/objects/Licensee_Brand__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Licensee_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>