force-app/main/default/objects/Licensee_Brand__c/fields/Brand_Group__c.field-meta.xml
<CustomField>
    <fullName>Brand_Group__c</fullName>
    <label>Brand Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BASF</fullName>
            </value>
            <value>
                <fullName>BAYER</fullName>
            </value>
            <value>
                <fullName>CORTEVA</fullName>
            </value>
            <value>
                <fullName>CPB</fullName>
            </value>
            <value>
                <fullName>ISC</fullName>
            </value>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>RPB</fullName>
            </value>
            <value>
                <fullName>STINE</fullName>
            </value>
            <value>
                <fullName>SYNGENTA</fullName>
            </value>
            <value>
                <fullName>UNIVERSITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>