force-app/main/default/objects/Licensee_Brand__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City/Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Licensee_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>